# KMCU

./: .gitignore  Cargo.toml  kmcu.toml
src/: main.rs  vlq.rs
src/config/: axis.rs  connection.rs  kinematics.rs  klipper_mcu.rs  mcu.rs  mod.rs  pin.rs  sim_mcu.rs
src/connections/: gpio.rs  mod.rs  rpmsg.rs  serial.rs  socket.rs
src/gcode/: de.rs  iter.rs  mod.rs
src/runtime/: mcu.rs  mod.rs
src/runtime/axes/: mod.rs
src/runtime/core_xy/: mod.rs
src/runtime/klipper_mcu/: identify.rs  mcu.rs  mod.rs
src/runtime/klipper_mcu/protocol/: command.rs  dictionary.rs  message.rs  vlq.rs
src/runtime/printer_runtime/: mod.rs
src/runtime/sim_mcu/: mod.rs
src/traits/: axis.rs  binary.rs  from_config.rs  mcu.rs
src/types/: command.rs  dictionary.rs  message.rs
src/wire/: mod.rs
src/wire/connections/: serial.rs
src/wire/traits/: binary.rs  connection.rs
src/wire/types/: command.rs  dictionary.rs  message.rs
