[package]
name = "KMCU"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.104"
static_init = "1.0.4"
libc = "0.2"

serde = {version = "1.0.229", features = ["derive"]}
serde_json = { version = "1.0.151", features = ["preserve_order"] }
toml = "1.1.3"

# For decompressing ZLIB on klipper printers
flate2 = {version = "1.1.9", features = ["zlib"]}

# Logging
log = "0.4.33"
pretty_env_logger = "0.5.0"
